--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
-  "private": true,
-  "scripts": {
-    "prod": "gulp --production",
-    "dev": "gulp watch"
-  },
+  "name": "Piggy",
+  "version": "1.0.0",
+  "description": "Loyalty application.",
   "devDependencies": {
+    "bootstrap-sass": "^3.0.0",
+    "browser-sync": "^2.7.13",
     "gulp": "^3.9.1",
-    "laravel-elixir": "^5.0.0",
-    "bootstrap-sass": "^3.0.0"
+    "gulp-autoprefixer": "^2.3.1",
+    "gulp-clean-css": "^2.0.10",
+    "gulp-concat": "^2.6.0",
+    "gulp-jshint": "^1.8.4",
+    "gulp-less": "^3.0.3",
+    "gulp-livereload": "^3.8.0",
+    "gulp-minify-html": "^1.0.4",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-typescript": "^2.13.6",
+    "gulp-uglify": "^1.2.0",
+    "merge-stream": "^1.0.0"
   }
 }
