--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "Piggy",
   "version": "1.0.0",
   "description": "Loyalty application.",
+  "private": true,
+  "scripts": {
+    "prod": "gulp --production",
+    "dev": "gulp watch"
+  },
   "devDependencies": {
+    "gulp": "^3.9.1",
+    "laravel-elixir": "^5.0.0",
     "bootstrap-sass": "^3.0.0",
     "browser-sync": "^2.7.13",
-    "gulp": "^3.9.1",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-clean-css": "^2.0.10",
     "gulp-concat": "^2.6.0",
